# algebras

./: CHANGELOG.md  LICENSE  README.md  algebras.cabal
src/Data/: Algebra.hs
src/Data/Algebra/: FAlgebra.hs  FBialgebra.hs  FCoalgebra.hs
src/Data/Algebra/FAlgebra/: Internal.hs
src/Data/Algebra/FBialgebra/: Internal.hs
src/Data/Algebra/FCoalgebra/: Internal.hs
