cabal-version:       2.2

name:                algebras
version:             0.1.0.0
synopsis:            Generalized operations on inductive types.
description:         A library for working with abstract notions of list and their operations based on initial F-algebras.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jake Leach
maintainer:          jacobleach@protonmail.com
copyright:           2020 - 2022
category:            Data
build-type:          Simple

extra-source-files:
  README.md
  CHANGELOG.md
  LICENSE

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

source-repository head
  type:     git
  location: https://github.com/riz0id/algebras

library
  import:              common
  hs-source-dirs:      src

  build-depends:
      base       >=4.14 && <4.16
    , containers >=0.6.2.1
    , text       >=1.2.4.0

  exposed-modules:
      Data.Algebra
    , Data.Algebra.FAlgebra
    , Data.Algebra.FAlgebra.Internal
    , Data.Algebra.FBialgebra
    , Data.Algebra.FBialgebra.Internal
    , Data.Algebra.FCoalgebra
    , Data.Algebra.FCoalgebra.Internal
